# quadframework

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  .gitmodules  AGENT-HIERARCHY.md  CLAUDE.md  CORE-AGENT.md  DEMO_READY_CHECKLIST.md  Dockerfile  INDUSTRY_STANDARDS_REVIEW.md  INSTALL.md  LICENSE  NEXT-STEPS.md  ONBOARDING.md  PATENT-REVIEW-RECOMMENDATIONS.md  POC-JAN13-PLAN.md  QUAD-AGENT-ARCHITECTURE.md  QUAD-AGENT-CLASS.md  QUAD-AGENT-PROTOCOL.md  QUAD-IMPLEMENTATION-SUMMARY.md  README.md  ROADMAP.md  SELF-MODIFICATION-TECHNICAL-GUIDE.md  SMART-HOME-IMPLEMENTATION.md  VALIDATION-PROOF.md  deploy-studio.sh  package-lock.json  package.json  quad.config.example.yaml  tailwind.config.ts  tsconfig.json
.claude/: README.md  config.json
.quad/: user-profile.json
EXAMPLES/: alexa-smart-home-use-case.md  spotify-one-day-agent.md
deployment/: vault.conf
documentation/: ADMIN_DASHBOARD_DEMO.md  AI_CONTEXT_MANAGEMENT.md  AI_PIPELINE_TIERS.md  AI_PRICING_TIERS.md  API_REFERENCE.md  ARCHITECTURE.md  COMPLETE_DEMO_FLOW.md  DATABASE_SCHEMA.md  DEPLOYMENT_MODES.md  DEV_AGENT_WORKFLOW.md  GITHUB_ORGANIZATION.md  GOOGLE_CLOUD_MIGRATION.md  JARGONS_MASTER.md  LIVE_DEMO_CHOICES.md  MASSMUTUAL_DEMO_COMPLETE.md  MASSMUTUAL_DEMO_SCRIPT.md  MULTI_PROVIDER_AI_STRATEGY.md  PATENT_DOCUMENTATION.md  PROJECT_OVERVIEW.md  QUAD_AI_ACTIVITIES.md  QUAD_AI_MODELS_CATALOG.md  QUAD_AI_PLATFORM_COMPARISON.md  QUAD_MASTER_FLOWS.md  README.md  (+8 more)
quad-cli/: README.md  pyproject.toml
quad-cli/quad_cli/: __init__.py  cli.py
quad-cli/quad_cli/commands/: __init__.py  deploy.py  hook.py  init.py  login.py  question.py
quad-cli/quad_cli/utils/: __init__.py  config.py  console.py
(+306 files in other folders)
