[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quad-cli"
version = "0.1.0"
description = "QUAD CLI - Quick Unified Agentic Development command line tools"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Gopi Suman Addanke", email = "suman.addanki@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "rich>=13.0",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
quad = "quad_cli.cli:main"
quad-init = "quad_cli.commands.init:main"
quad-deploy = "quad_cli.commands.deploy:main"
quad-login = "quad_cli.commands.login:main"
quad-question = "quad_cli.commands.question:main"

[project.urls]
Homepage = "https://quadframe.work"
Repository = "https://github.com/a2Vibes/QUAD"

[tool.setuptools.packages.find]
where = ["."]
include = ["quad_cli*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
